Fix mobile menu disappearing behind the editmode panel.

--- a/sources/stylesheets/components/_navigation-menus.scss
+++ b/sources/stylesheets/components/_navigation-menus.scss
@@ -252,7 +252,7 @@
     }
 
     .editmode & {
-      bottom: 40px;
+      height: calc(100% - 40px);
     }
 
     .mobilemenu-open & {
